--- a/WorkSpace/HSK/HSK.vcxproj
+++ b/WorkSpace/HSK/HSK.vcxproj
@@ -333,7 +333,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ASB\game.cpp" />
+    <ClCompile Include="game.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
