--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -334,12 +334,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Components\Collision\CircleCollider.h" />
+    <ClInclude Include="Components\Fmod\AudioSystem.h" />
+    <ClInclude Include="Components\Fmod\FModComponent.h" />
     <ClInclude Include="Components\Rendering\CircleComponent.h" />
     <ClInclude Include="Components\Base\ActiveComponent.h" />
     <ClInclude Include="Components\Base\MonoBehavior.h" />
     <ClInclude Include="Components\Base\BaseObject.h" />
     <ClInclude Include="Components\Physics\Rigidbody2D.h" />
     <ClInclude Include="Datas\CollisionInfo.h" />
+    <ClInclude Include="Datas\SoundDatas.h" />
+    <ClInclude Include="External\FMod\fmod.h" />
+    <ClInclude Include="External\FMod\fmod.hpp" />
+    <ClInclude Include="External\FMod\fmod_codec.h" />
+    <ClInclude Include="External\FMod\fmod_common.h" />
+    <ClInclude Include="External\FMod\fmod_dsp.h" />
+    <ClInclude Include="External\FMod\fmod_dsp_effects.h" />
+    <ClInclude Include="External\FMod\fmod_errors.h" />
+    <ClInclude Include="External\FMod\fmod_output.h" />
     <ClInclude Include="Systems\MonoBehaviorSystem.h" />
     <ClInclude Include="Systems\CollisionSystem.h" />
     <ClInclude Include="Components\Collision\AABBCollider.h" />
@@ -394,6 +405,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Components\Collision\CircleCollider.cpp" />
+    <ClCompile Include="Components\Fmod\AudioSystem.cpp" />
+    <ClCompile Include="Components\Fmod\FModComponent.cpp" />
     <ClCompile Include="Components\Rendering\CircleComponent.cpp" />
     <ClCompile Include="Components\Base\BaseObject.cpp" />
     <ClCompile Include="Components\Base\Component.cpp" />
@@ -439,6 +452,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+    <None Include="External\FMod\fmod.cs" />
+    <None Include="External\FMod\fmod_dsp.cs" />
+    <None Include="External\FMod\fmod_errors.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="External\FMod\fmodL_vc.lib" />
+    <Library Include="External\FMod\fmod_vc.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
